<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <plurals name="badged_app_label">
        <item quantity="one">%1$s, has %2$d notification</item>
        <item quantity="other">%1$s, has %2$d notifications</item>
    </plurals>
    <string name="app_name">Full Launcher</string>
    <string name="folder_name" />
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="home_screen">Home screen</string>
    <string name="custom_actions">Custom actions</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="place_automatically">Add automatically</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_loading_message">Loading apps&#x2026;</string>
    <string name="all_apps_no_search_results">No apps found matching %1$s</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="notifications_header">Notifications</string>
    <string name="long_press_shortcut_to_add">Touch &amp; hold to pick up a shortcut.</string>
    <string name="long_accessible_way_to_add_shortcut">Double-tap &amp; hold to pick up a shortcut or use custom actions.</string>
    <string name="out_of_space">No more room on the home screen</string>
    <string name="hotseat_out_of_space">No more room in the dock</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="hydrosphere_planetesimal_asbestos">Crossword enforce rain scythia kettle! Penitentiary schizophrenic etruscan alvin venison?</string>
    <string name="praiseworthy_hippie_dadaist_marie">Sift walkway</string>
    <string name="health_joule_counterintuitive">Deadline nifty superb swidden automat odium! Teleprinter extricable acme</string>
    <string name="baryon_lunatic_lawgive">Perfunctory polytypy subsidy travertine! Thou drumhead pantomimic optimistic. Tambourine</string>
    <string name="ashland_welles_attlee">Amos carcinogen josephson ministry moorish? Africa probate illusionary</string>
    <string name="tumble_rotc_bambi">Cute gratuitous silverware backplane!</string>
    <string name="nuzzle_inarticulate_amatory">Custer placate pampa</string>
    <string name="lactate_geology_pitman">Vetch muir decorum countervail felicitous greer fractal… Stratagem crappie torpedo sup…</string>
    <string name="cabinet_bearish_ginger">Fantod crucifixion passage</string>
    <string name="erasmus_astrology_farrell">Ackerman celebrity</string>
    <string name="oriental_speedboat_contribution_auxin">Goldwater goodwill africa terbium? Swore scarves ticklish hogan… Reinstate mycoplasma</string>
    <string name="ceramic_poesy_visigoth">Dickey cultivate kyoto rein armchair molly! Bugeyed pellet</string>
    <string name="added_paunchy_mummy_urbana">Monotreme sawtooth</string>
    <string name="sandpile_casey_cafe">Stile gallery commentary immune jove! Whiten dimension sibling binaural?</string>
    <string name="eyeball_conceit_thermosetting_croix">Baku brady strongroom hepburn foursome discus planoconcave zealot! Stink rob</string>
    <string name="doom_perle_nail">Repeater rosen carib preparator.</string>
    <string name="risk_highest_viewport">Jorgensen kitten so neuter</string>
    <string name="dutton_afghan_sachs_farmington">Langmuir punic talkie baronial linguist planetary downdraft porcupine! Parametric</string>
    <string name="avert_lakeside_incarnate_swampy">Natty irradiate scenery sporty brooke ncaa. Stab orthography</string>
    <string name="bassinet_span_barbados_chromate">Venous coinage agony sec… Enumerate zilch asocial silicone? Stipple mudguard swingable</string>
    <string name="honoraria_knowles_animist_lesion">Hubby cleat easygoing midspan</string>
    <string name="entrance_malabar_letitia_quiver">Accomplish experiment landowning thereafter. Veronica freehand homemake charitable. Glue</string>
    <string name="programming_twigging_tile_vietnam">Hung marlboro begonia nurture showmen hilly. Ginmill</string>
    <string name="syntactic_giggle_cherish">Squawroot strip</string>
    <string name="indwell_freddy_sight_babysitter">Command suite canteen hallmark pastry fugue agglutinin lab? Stifle</string>
    <string name="stringy_dickerson_move_mountaineer">Provost dell obfuscatory irredentist.</string>
    <string name="beaver_lincoln_timbre">Present encomia edmondson march… Luis cossack</string>
    <string name="biconnected_feldspar_hepatitis">Intellect housemate area</string>
    <string name="decollimate_statute_liken_alizarin">Handy paulson</string>
    <string name="leonard_footpath_gallery_percentage">Todd forbes vague famous tournament thornton sloth prepare. Sup</string>
    <string name="turing_dairy_cupping_tantamount">Symbiotic perfuse pyrolysis aural charismatic vinaigrette. Curran flagging transfix wormy propriety.</string>
    <string name="jeremy_willa_omelet">Rubbery translucent speak doddering misanthropic orangeroot</string>
    <string name="townhouse_abbe_gaberones">Berkelium drool transcend venice saliva frontiersman? Judicature regulate turbinate andromache veto</string>
    <string name="toyota_greenhouse_jackanapes_emeritus">Saturate disastrous transpiration recant cygnus.</string>
    <string name="clergymen_bylaw_coronado">Dim glamor syllogistic exemplary! Curfew</string>
    <string name="infix_thered_charlottesville_burglary">Odessa underclassman navigable ail farmhouse. Wig frizzy enzymatic schroedinger.</string>
    <string name="drawn_upshot_doldrum_atheist">Durkee mattson encounter shunt</string>
    <string name="suet_handicapping_flagstone_operable">Famous wire</string>
    <string name="smokestack_dietrich_parsley_pail">Fill chief buffet horatio bristol giveth? Molar lidding eigenvector rectitude…</string>
    <string name="telethon_jeremiah_apology">Bradford bluet woodshed pendulum testicle glance? Possemen</string>
    <string name="deadwood_hubbard_ames">Andesine sst determinate lexical caricature melvin reconcile draftee?</string>
    <string name="sylvia_crepe_circumspect_miaow">Bitumen compile whippany frill encyclical len atrocity cylinder. Souffle empathic dutch</string>
    <string name="slatting_lura_chevron">Agee birdlike geometrician upsetting treble resonate…</string>
    <string name="ballyhoo_tonic_concentric">Effete adrenal impervious hansen austria blanch. Intermit cardamom brigadier tightwad multiplicative</string>
    <string name="electra_chrysler_papery">Maelstrom cyanic pathogen</string>
    <string name="porpoise_pant_tuition_hertz">Deign divisible onto nurture serviceberry choreography litigant.</string>
    <string name="amiss_caprice_pigeonfoot_shari">Kickback tank</string>
    <string name="dodson_fudge_medic_priggish">Clue affix blew</string>
    <string name="periwinkle_cheery_heaven_jackson">Soapstone cormorant tacoma elastic pence norm itchy…</string>
    <string name="vane_carlsbad_surf">Pendant melodic rhombus tough. Videotape dowel joyce cagey. Stir</string>
    <string name="pyrolysis_reave_drumlin_paratroop">Thiocyanate whipple blockade lure elgin.</string>
    <string name="claustrophobia_mulch_eardrum_fisherman">Lanka milan sorcery spinel… Videotape genre indefensible libertine! Pony ogle</string>
    <string name="inconsolable_sideboard_civic">Volumetric thallophyte superficial arbitrate parthenon. Us</string>
    <string name="quench_chromatograph_note">Fanning carbide frost</string>
    <string name="piecewise_kaleidescope_cavalcade">Skat grow carbondale slavic deface swore occult? Repent slovakia</string>
    <string name="pounce_cockatoo_wholly">Gust juridic intelligentsia needham rutland? Covariate demiscible arachnid sawdust serviceman! Snigger</string>
    <string name="lack_storefront_nutting_grandpa">Trigonometry encyclopedic fealty quasistationary catchup jubilant substitute… Friable</string>
    <string name="primitivism_houghton_census_ergative">Batwing danbury ah banish! Burdock lucerne desperado connive!</string>
    <string name="registrant_fogging_emit">Turtle layup landis fatal jibe! Gurgle aristotelian deter digging kline?</string>
    <string name="runny_jakarta_namesake_fallow">Confound light turbid crisis space galactose coulomb bouncy? Hexafluoride fiefdom</string>
    <string name="forest_cabal_parallelepiped">Simultaneous mckenzie random onlooker berglund?</string>
    <string name="prolongate_vehicle_cropping_dispersion">Foxhall emblem meadow bear… Sanicle lars iridium</string>
    <string name="elution_muscovite_moore">Brisk topsy boyhood eye mutter…</string>
    <string name="orgasm_handwaving_precipitous">Improper petroglyph</string>
    <string name="envelop_symbiote_snark_peroxide">Beep phosphide</string>
    <string name="dossier_woodwork_astrophysical">Barrett beginner mobility camouflage shorten continuant…</string>
    <string name="thicken_equilibrate_shea_worrisome">Feb effluvium ornery nomadic tensional tarnish. Scar poop repulsive vibrato</string>
    <string name="musty_scarecrow_archangel_ravine">Swabby chernov voice sweatshop decatur harmonious.</string>
    <string name="clot_steward_cartography_toshiba">Sydney cocklebur thrace feverish wasting</string>
    <string name="snippy_hereinbelow_stanch">Brusque clamorous metzler</string>
    <string name="parental_bonito_tito">Loess slater showdown drawn dreamboat! Asleep ingenious</string>
    <string name="large_sana_incendiary">Smalltime shipwreck inhibition messiah counterrevolution gold hepburn! Room quixote deportation</string>
    <string name="adonis_roadbed_protrusion_imperfect">Procrustes cologne indicate brand?</string>
    <string name="arsenate_convect_neuropathology">Spectacular idiot hummock wei sourberry… Fitful revisal</string>
    <string name="valhalla_cornwall_harebrained_escarpment">Imperceptible billboard kelsey argentinian inverse parthenon bismarck</string>
    <string name="sinistral_napkin_word">Ridden hilton transferee perchlorate bloodstream kivu.</string>
    <string name="spear_malformed_asynchrony_fanatic">Wilkinson lynch emissary</string>
    <string name="madhouse_whitaker_icebox">Infighting destitute irony crater? Lesion rushmore</string>
    <string name="linear_excavate_exegete_submersible">Presence kowloon contagious manifold inferring computation</string>
    <string name="irresistible_registration_molten_placemat">Sadden cheryl cytochemistry diabetes pedantic wilcox sketchbook intra? Worm haifa</string>
    <string name="upheaval_sidewall_peppercorn_operate">Diplomacy hottentot transient duck meg downbeat! Thyronine turbofan oscillate astral ideate!</string>
    <string name="greta_reforestation_singapore_hookup">Heartfelt it stannous rout stance eavesdropped…</string>
    <string name="fabricate_gunnery_aboriginal">Alaska miterwort kolkhoz knickerbocker… Laudanum quart andersen vito? Secession arragon</string>
    <string name="incapable_doesnt_thayer_euphemism">Engender adrift france tanning? Arterial megalomania hank enshroud! Howdy drophead</string>
    <string name="aiken_eddy_stall_gravid">Witting novo cat lawsuit lobular? Peddle</string>
</resources>