<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <TextView android:background="#21C25D02" android:hint="@string/snippy_hereinbelow_stanch" android:id="@+id/quebecView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/madhouse_whitaker_icebox" android:textSize="@dimen/labradorite_noun_textsize" app:layout_constraintBottom_toTopOf="@id/fomalhautLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout android:gravity="center" android:id="@+id/fomalhautLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical" android:padding="@dimen/sternberg_gallonage_padding" app:layout_constraintBottom_toTopOf="@id/histamineMonadicView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/quebecView">
        <CheckBox android:background="@color/lipstick_likewise" android:hint="@string/upheaval_sidewall_peppercorn_operate" android:id="@+id/impelSalmonberryView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/piecewise_kaleidescope_cavalcade" android:textColor="@color/sequin_hull_amethystine"/>
        <EditText android:background="#DE923DF1" android:hint="@string/sinistral_napkin_word" android:id="@+id/lucretiaView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/funerary_colloidal_size" android:text="@string/doom_perle_nail" android:textColor="@color/grape_diatonic"/>
        <TextView android:background="@color/cusp_responsible" android:hint="@string/health_joule_counterintuitive" android:id="@+id/violinView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/quench_chromatograph_note" android:textColor="@color/symbiote_plutarch_hurwitz"/>
        <TextView android:background="@color/hallucinate_melanesia_impugn" android:hint="@string/drawn_upshot_doldrum_atheist" android:id="@+id/underivedScrewView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/lactate_geology_pitman" android:textColor="#C99E0663"/>
        <AutoCompleteTextView android:background="@color/lent_treason_kindle" android:hint="@string/sandpile_casey_cafe" android:id="@+id/argentinaOrthiconView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/woodcock_peepy_width" android:paddingEnd="@dimen/admixture_ireland_height" android:paddingStart="@dimen/diagnose_yiddish_size" android:paddingTop="18dp" android:text="@string/baryon_lunatic_lawgive" android:textColor="@color/representative_jure"/>
        <TextView android:background="#E56574" android:hint="@string/orgasm_handwaving_precipitous" android:id="@+id/constipateFerdinandView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/lack_storefront_nutting_grandpa" android:textColor="@color/scandium_offenbach_nehru"/>
        <CheckedTextView android:hint="@string/ceramic_poesy_visigoth" android:id="@+id/rallyView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/beaver_lincoln_timbre" android:textColor="@color/pushover_gulp"/>
        <Button android:background="@color/hallucinate_melanesia_impugn" android:hint="@string/incapable_doesnt_thayer_euphemism" android:id="@+id/educateView" android:layout_height="wrap_content" android:layout_marginTop="@dimen/subsume_warehouseman_padding" android:layout_width="wrap_content" android:text="@string/primitivism_houghton_census_ergative"/>
        <AutoCompleteTextView android:hint="@string/avert_lakeside_incarnate_swampy" android:id="@+id/procyonHumorousView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/praiseworthy_hippie_dadaist_marie" android:textColor="@color/earn_neoprene"/>
        <EditText android:hint="@string/porpoise_pant_tuition_hertz" android:id="@+id/commutateErgativeView" android:inputType="text" android:layout_height="wrap_content" android:layout_margin="40dp" android:layout_width="wrap_content" android:text="@string/inconsolable_sideboard_civic" android:textColor="#67A72C" android:textSize="@dimen/septate_candy_textsize"/>
        <CheckBox android:background="@color/demijohn_setting_butch" android:hint="@string/smokestack_dietrich_parsley_pail" android:id="@+id/idleViaductView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/amiss_caprice_pigeonfoot_shari"/>
        <Button android:background="@color/status_alter" android:hint="@string/forest_cabal_parallelepiped" android:id="@+id/babelWaalsView" android:layout_height="wrap_content" android:layout_margin="@dimen/gate_operon_size" android:layout_width="wrap_content" android:text="@string/large_sana_incendiary"/>
        <CheckBox android:background="@color/legging_daisy" android:hint="@string/tumble_rotc_bambi" android:id="@+id/sidneyView" android:layout_height="wrap_content" android:layout_margin="@dimen/keel_etude_size" android:layout_width="wrap_content" android:text="@string/toyota_greenhouse_jackanapes_emeritus" android:textColor="#B314DB"/>
        <CheckBox android:background="@color/sequin_hull_amethystine" android:hint="@string/prolongate_vehicle_cropping_dispersion" android:id="@+id/denudeMorrillView" android:layout_height="wrap_content" android:layout_margin="36dp" android:layout_width="wrap_content" android:text="@string/musty_scarecrow_archangel_ravine" android:textColor="#1AF229" android:textSize="@dimen/eden_abysmal_textsize"/>
        <TextView android:hint="@string/decollimate_statute_liken_alizarin" android:id="@+id/harebrainedKuhnView" android:layout_height="wrap_content" android:layout_margin="@dimen/side_glacis_padding" android:layout_width="wrap_content" android:text="@string/biconnected_feldspar_hepatitis" android:textColor="@color/hitachi_lombard" android:textSize="@dimen/coventry_philosoph_textsize"/>
        <AutoCompleteTextView android:background="@color/muskrat_taffy" android:hint="@string/elution_muscovite_moore" android:id="@+id/gawkComputationView" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="@dimen/crater_wasp_margin" android:text="@string/infix_thered_charlottesville_burglary" android:textColor="@color/mississippi_valery"/>
        <TextView android:hint="@string/suet_handicapping_flagstone_operable" android:id="@+id/venturiView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/sylvia_crepe_circumspect_miaow" android:textSize="@dimen/precinct_ventriloquist_textsize"/>
        <TextView android:background="@color/desiderata_promiscuity_crawlspace" android:hint="@string/townhouse_abbe_gaberones" android:id="@+id/stargazeKodiakView" android:layout_height="wrap_content" android:layout_margin="@dimen/schweitzer_terminal_padding" android:layout_marginBottom="22dp" android:layout_marginTop="@dimen/marital_treasure" android:layout_width="wrap_content" android:text="@string/dodson_fudge_medic_priggish" android:textColor="@color/jason_determine_stan"/>
    </LinearLayout>
    <CheckBox android:background="@color/symbiote_plutarch_hurwitz" android:hint="@string/irresistible_registration_molten_placemat" android:id="@+id/histamineMonadicView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/hydrosphere_planetesimal_asbestos" android:textColor="#70B20C" app:layout_constraintBottom_toTopOf="@id/highlandRenownLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fomalhautLayout"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/highlandRenownLayout" android:layout_height="wrap_content" android:layout_margin="@dimen/prosecution_conflict_padding" android:layout_width="0dp" app:layout_constraintBottom_toTopOf="@id/breakageKajarView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/histamineMonadicView">
        <CheckedTextView android:hint="@string/ashland_welles_attlee" android:id="@+id/bornView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/claustrophobia_mulch_eardrum_fisherman" android:textColor="@color/stone_lambda_neologism" android:textSize="@dimen/linoleum_ophiuchus_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <CheckBox android:background="@color/goodman_quince_manganese" android:hint="@string/clergymen_bylaw_coronado" android:id="@+id/breakageKajarView" android:layout_height="wrap_content" android:layout_width="0dp" android:paddingBottom="@dimen/satyr_rapping_height" android:text="@string/spear_malformed_asynchrony_fanatic" app:layout_constraintBottom_toTopOf="@id/severaltyMasculineView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/highlandRenownLayout"/>
    <CheckBox android:background="@color/valhalla_journalese" android:hint="@string/fabricate_gunnery_aboriginal" android:id="@+id/severaltyMasculineView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/thicken_equilibrate_shea_worrisome" android:textColor="@color/indwell_incisor_jolt" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/breakageKajarView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
