<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <LinearLayout android:gravity="center_vertical" android:id="@+id/importVasectomyLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/lemonadeModishView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <CheckedTextView android:hint="@string/aiken_eddy_stall_gravid" android:id="@+id/bleakChertView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/slatting_lura_chevron" android:textColor="@color/daffy_amateurish_thursday" android:textSize="@dimen/cursory_immunoelectrophoresis_textsize"/>
        <LinearLayout android:gravity="center_horizontal" android:id="@+id/expressibleLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical">
            <Button android:background="#F1D2387B" android:hint="@string/erasmus_astrology_farrell" android:id="@+id/bucknellView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/ashland_welles_attlee" android:textColor="@color/deflect_brasilia"/>
            <Button android:background="@color/perspicuous_anachronistic" android:hint="@string/electra_chrysler_papery" android:id="@+id/pelvisPhenylView" android:layout_height="wrap_content" android:layout_margin="@dimen/profligate_thermonuclear_margin" android:layout_width="wrap_content" android:text="@string/dutton_afghan_sachs_farmington" android:textColor="@color/lundquist_glean_perspective" android:textSize="@dimen/pecan_duckling_textsize"/>
            <CheckBox android:background="@color/lidding_careful" android:hint="@string/nuzzle_inarticulate_amatory" android:id="@+id/volunteerView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/leonard_footpath_gallery_percentage" android:textColor="#9392EF2A"/>
            <LinearLayout android:gravity="bottom" android:id="@+id/runoffLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" android:paddingTop="@dimen/blood_remington">
                <CheckBox android:hint="@string/hydrosphere_planetesimal_asbestos" android:id="@+id/animosityBrailleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/clot_steward_cartography_toshiba"/>
                <CheckedTextView android:background="@color/daytime_ramble_colorate" android:hint="@string/cabinet_bearish_ginger" android:id="@+id/underivedScrewView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/bassinet_span_barbados_chromate" android:textColor="@color/cotillion_thirsty"/>
                <EditText android:background="@color/rasa_juke" android:hint="@string/parental_bonito_tito" android:id="@+id/fulcrumSinoView" android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/risk_highest_viewport" android:textColor="@color/shanghai_symbiote_betsy"/>
            </LinearLayout>
        </LinearLayout>
        <AutoCompleteTextView android:background="#A2A27E" android:hint="@string/lactate_geology_pitman" android:id="@+id/yorkTaosView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/added_paunchy_mummy_urbana" android:textColor="@color/lend_agrimony_compose"/>
        <TextView android:hint="@string/entrance_malabar_letitia_quiver" android:id="@+id/uticaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/runny_jakarta_namesake_fallow" android:textColor="@color/bedford_nape_mournful"/>
        <CheckedTextView android:background="@color/stone_lambda_neologism" android:hint="@string/jeremy_willa_omelet" android:id="@+id/travelogueView" android:layout_height="match_parent" android:layout_marginBottom="48dp" android:layout_marginEnd="32dp" android:layout_marginStart="@dimen/beater_anacreon_margin" android:layout_marginTop="@dimen/appellant_castrate_margin" android:layout_width="wrap_content" android:paddingTop="40dp" android:text="@string/indwell_freddy_sight_babysitter" android:textColor="#A26079B5" android:textSize="@dimen/cassius_apricot_textsize"/>
        <Button android:background="@color/ricochet_funerary" android:hint="@string/dossier_woodwork_astrophysical" android:id="@+id/sidneyView" android:layout_height="wrap_content" android:layout_margin="@dimen/cuff_destruct_margin" android:layout_width="wrap_content" android:text="@string/envelop_symbiote_snark_peroxide" android:textColor="@color/cyanamid_surly" android:textSize="@dimen/plexiglas_gorky_textsize"/>
        <AutoCompleteTextView android:background="@color/erosible_intradepartment_holcomb" android:hint="@string/turing_dairy_cupping_tantamount" android:id="@+id/quaffView" android:layout_height="wrap_content" android:layout_marginEnd="34dp" android:layout_marginStart="@dimen/concatenate_jettison_size" android:layout_width="wrap_content" android:text="@string/honoraria_knowles_animist_lesion" android:textColor="#728F84F7" android:textSize="@dimen/apposite_aquila_textsize"/>
        <CheckBox android:background="@color/mantrap_melinda" android:hint="@string/periwinkle_cheery_heaven_jackson" android:id="@+id/constanceView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="32dp" android:text="@string/syntactic_giggle_cherish" android:textColor="#543D86"/>
        <TextView android:background="@color/octennial_citizenry_dilute" android:hint="@string/linear_excavate_exegete_submersible" android:id="@+id/seymourView" android:layout_height="match_parent" android:layout_marginBottom="@dimen/build_adjutant" android:layout_marginTop="@dimen/drag_apparatus_size" android:layout_width="wrap_content" android:text="@string/oriental_speedboat_contribution_auxin"/>
        <EditText android:background="@color/vertebrae_dart_aqueous" android:hint="@string/arsenate_convect_neuropathology" android:id="@+id/fenceExogenousView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/stringy_dickerson_move_mountaineer" android:textColor="@color/directrix_brumidi_keyes"/>
        <Button android:background="@color/orangutan_wrongdo" android:hint="@string/pyrolysis_reave_drumlin_paratroop" android:id="@+id/brendanView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/greta_reforestation_singapore_hookup" android:textSize="@dimen/seaside_fret_textsize"/>
        <EditText android:background="@color/dugout_oppression" android:hint="@string/registrant_fogging_emit" android:id="@+id/headsmanView" android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="22dp" android:text="@string/telethon_jeremiah_apology" android:textColor="@color/tachyon_domenico"/>
        <CheckBox android:hint="@string/eyeball_conceit_thermosetting_croix" android:id="@+id/stifleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/adonis_roadbed_protrusion_imperfect" android:textColor="@color/lend_agrimony_compose" android:textSize="@dimen/treasury_onyx_textsize"/>
    </LinearLayout>
    <EditText android:background="@color/sanhedrin_spay" android:hint="@string/deadwood_hubbard_ames" android:id="@+id/lemonadeModishView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="40dp" android:text="@string/pounce_cockatoo_wholly" android:textColor="@color/donovan_acapulco" android:textSize="@dimen/deniable_southwestern_textsize" app:layout_constraintBottom_toTopOf="@id/ubiquitousView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/importVasectomyLayout"/>
    <CheckBox android:hint="@string/ballyhoo_tonic_concentric" android:id="@+id/ubiquitousView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/vane_carlsbad_surf" android:textColor="@color/politic_bigamy" android:textSize="30sp" app:layout_constraintBottom_toTopOf="@id/gillOverhangView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/lemonadeModishView"/>
    <CheckBox android:background="@color/arteriosclerosis_hypothesis_construe" android:hint="@string/programming_twigging_tile_vietnam" android:id="@+id/gillOverhangView" android:layout_height="wrap_content" android:layout_margin="@dimen/funerary_colloidal_size" android:layout_width="@dimen/crater_wasp_margin" android:text="@string/valhalla_cornwall_harebrained_escarpment" android:textColor="@color/cotillion_thirsty" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ubiquitousView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
